--- a/app.json
+++ b/app.json
@@ -8,8 +8,8 @@
 		"icon": "./assets/icon.png",
 		"splash": {
 			"image": "./assets/splash.png",
-			"resizeMode": "contain",
-			"backgroundColor": "#ffffff"
+			"backgroundColor": "#ffffff",
+			"resizeMode": "contain"
 		},
 		"updates": {
 			"fallbackToCacheTimeout": 0
