--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-facebook": "~8.1.0",
     "expo-google-app-auth": "^8.1.0",
     "expo-linear-gradient": "~8.1.0",
+    "expo-linking": "~1.0.1",
     "firebase": "7.9.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
